---
source: crates/rs_html_parser_tokenizer/tests/html5lib_special_tests.rs
expression: "tokenize(\"<a a=a&>foo\")"
---
[
    TokenizerToken {
        start: 1,
        end: 2,
        location: OpenTagName,
        code: 0,
        quote: NoValue,
    },
    TokenizerToken {
        start: 3,
        end: 4,
        location: AttrName,
        code: 0,
        quote: NoValue,
    },
    TokenizerToken {
        start: 5,
        end: 6,
        location: AttrData,
        code: 0,
        quote: Unquoted,
    },
    TokenizerToken {
        start: 6,
        end: 7,
        location: AttrEntity,
        code: 38,
        quote: Unquoted,
    },
    TokenizerToken {
        start: 7,
        end: 7,
        location: AttrEnd,
        code: 0,
        quote: Unquoted,
    },
    TokenizerToken {
        start: 7,
        end: 7,
        location: OpenTagEnd,
        code: 0,
        quote: NoValue,
    },
    TokenizerToken {
        start: 8,
        end: 11,
        location: Text,
        code: 0,
        quote: NoValue,
    },
    TokenizerToken {
        start: 11,
        end: 11,
        location: End,
        code: 0,
        quote: NoValue,
    },
]
